cluster/redcloud/apps/nutweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nutweb
  namespace: nutweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nutweb
  template:
    metadata:
      labels:
        app: nutweb
    spec:
      containers:
        - name: nutweb
          image: ghcr.io/superioone/nut_webgui:latest
          resources:
            limits:
              memory: "96Mi"
              cpu: "375m"
            requests:
              memory: "48Mi"
              cpu: "150m"
          ports:
            - containerPort: 9000
          startupProbe:
            httpGet:
              path: /probes/readiness
              port: 9000
            initialDelaySeconds: 5
            failureThreshold: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /probes/health
              port: 9000
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /probes/readiness
              port: 9000
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 30
