cluster/redcloud/apps/nutweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nutweb
  namespace: nutweb
spec:
  type: ClusterIP
  selector:
    app: nutweb
  ports:
  - port: 80
    targetPort: 9000
